--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: spotlight_ui
-description: "A new Flutter package project."
+description: "is a Flutter package designed to add eye-catching spotlight effects to your user interface elements."
 version: 0.0.1
 homepage:
 
