--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: spotlight_ui
 description: "is a Flutter package designed to add eye-catching spotlight effects to your user interface elements."
 version: 0.0.1
-homepage:
+repository: https://github.com/n0ndescr1pt/spotlight_ui
 
 environment:
   sdk: ^3.3.0
